Finished PCO OAuth integration.

--- a/F1PCO.Web/Views/F1People/Index.cshtml
+++ b/F1PCO.Web/Views/F1People/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model F1PCO.Web.ViewModels.Person.IndexViewModel
+﻿@model F1PCO.Web.ViewModels.F1People.IndexViewModel
 @{
     ViewBag.Title = "Index";
 }
