--- a/F1PCO.Web/Views/Home/Index.cshtml
+++ b/F1PCO.Web/Views/Home/Index.cshtml
@@ -6,3 +6,4 @@
 
 <h2>Home</h2>
 @Html.ActionLink("Test F1 Auth", "Authenticate", "F1Auth")
+@Html.ActionLink("Test PCO Auth", "Authenticate", "PCOAuth")
