--- a/F1PCO.Web/Views/Home/Index.cshtml
+++ b/F1PCO.Web/Views/Home/Index.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h2>Home</h2>
-@Html.ActionLink("Test F1 Auth", "Authenticate", "F1Auth")
-@Html.ActionLink("Test PCO Auth", "Authenticate", "PCOAuth")
+@Html.ActionLink("Login", "Authenticate", "F1Auth")
