Simple person search working in F1

--- a/F1PCO.Web/Views/Home/Ready.cshtml
+++ b/F1PCO.Web/Views/Home/Ready.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h2>Ready!</h2>
-@Html.ActionLink("Show me the F1 people", "Index", "F1People");
-@Html.ActionLink("Show me the PCO people", "Index", "PCOPeople");
+@Html.ActionLink("Search for F1 People", "SearchByName", "F1People");
