Simple search for PCO People finished!

--- a/F1PCO.Web/Views/Home/Ready.cshtml
+++ b/F1PCO.Web/Views/Home/Ready.cshtml
@@ -5,4 +5,5 @@
 }
 
 <h2>Ready!</h2>
-@Html.ActionLink("Search for F1 People", "SearchByName", "F1People");
+@Html.ActionLink("Search for F1 People", "SearchByName", "F1People")
+@Html.ActionLink("Search for PCO People", "SearchByName", "PCOPeople")
