Still sorting through OAuth factoring.
Should be able to take the Integration pieces out of the MVC project now.

--- a/F1PCO.Web/Views/F1People/ExistingPeople.cshtml
+++ b/F1PCO.Web/Views/F1People/ExistingPeople.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<F1PCO.Web.Models.F1Person>
+﻿@model IEnumerable<F1PCO.F1Person>
 
 <h2>People we've seen before</h2>
 <table class="table table-striped">
