--- a/F1PCO.Web/Views/PCOPeople/ExistingPeople.cshtml
+++ b/F1PCO.Web/Views/PCOPeople/ExistingPeople.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<F1PCO.Web.Models.PCOPerson>
+﻿@model IEnumerable<F1PCO.PCOPerson>
 
 <h2>People we've seen before</h2>
 <table class="table table-striped">
