Massive refactor to get WebApi integrated and working.

--- a/F1PCO.Web/Views/Shared/_Layout.cshtml
+++ b/F1PCO.Web/Views/Shared/_Layout.cshtml
@@ -57,12 +57,12 @@
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li>@Html.ActionLink("home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("search", "Index", "Search")</li>
                     </ul>
                     <ul class="nav pull-right">
                         <li>@Html.Partial("_LogOnPartial")</li>
                         <li class="divider-vertical"></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b
-                            class="caret"></b></a>
+                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Another action</a></li>
                                 <li><a href="#">Something else here</a></li>
