--- a/F1PCO.Web/Views/Home/Search.cshtml
+++ b/F1PCO.Web/Views/Home/Search.cshtml
@@ -1,2 +1,59 @@
 ﻿@model dynamic
 
+@section ScriptSection
+{
+    @MvcHtmlString.Create(SquishIt.Framework.Bundle.JavaScript()
+        .Add("~/Scripts/Search.js")
+        .Render("~/cachedassets/search_#.js")))
+}
+<form class="well form-search" data-bind="submit: startSearch">
+    <input type="text" class="input-medium search-query" data-bind="value: searchTerm" placeholder="The person's first or last name..." />
+    <button id="searchButton" type="submit" class="btn" data-bind="text: isSearchInProgress() == true ? 'Searching...' : 'Search', disable: isSearchInProgress()">Search</button>
+</form>
+
+<div class="row">
+    <div class="span6">
+        <h3>Fellowship One</h3>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>F1ID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                </tr>
+            </thead>
+            <tbody data-bind="template: { name: 'f1person-template', foreach: f1People }">
+            </tbody>
+        </table>
+    </div>
+    <div class="span6">
+        <h3>Planning Center Online</h3>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>PCOID</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                </tr>
+            </thead>
+            <tbody data-bind="template: { name: 'pcoperson-template', foreach: pcoPeople }">
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<script type="text/html" id="f1person-template">
+    <tr>
+        <td data-bind="text: f1id"></td>
+        <td data-bind="text: firstName"></td>
+        <td data-bind="text: lastName"></td>
+    </tr>
+</script>
+
+<script type="text/html" id="pcoperson-template">
+    <tr>
+        <td data-bind="text: pcoid"></td>
+        <td data-bind="text: firstName"></td>
+        <td data-bind="text: lastName"></td>
+    </tr>
+</script>
