Done a chunk of work getting all of the details together for Email and Phone.

--- a/F1PCO.Web/Views/Shared/_Layout.cshtml
+++ b/F1PCO.Web/Views/Shared/_Layout.cshtml
@@ -110,6 +110,7 @@
             .Add("~/Scripts/jquery-1.7.2.js")
             .Add("~/Scripts/jquery.validate.js")
             .Add("~/Scripts/jquery.validate.unobtrusive.js")
+            .Add("~/Scripts/jquery.timeago.js")
             .Add("~/Scripts/knockout-2.1.0.js")
             .Add("~/bootstrap/js/bootstrap-transition.js")
             .Add("~/bootstrap/js/bootstrap-alert.js")
