--- a/F1PCO.Web/Views/Home/Search.cshtml
+++ b/F1PCO.Web/Views/Home/Search.cshtml
@@ -4,7 +4,7 @@
 {
     @MvcHtmlString.Create(SquishIt.Framework.Bundle.JavaScript()
         .Add("~/Scripts/Search.js")
-        .Render("~/cachedassets/search_#.js")))
+        .Render("~/cachedassets/search_#.js"))
 }
 <form class="well form-search" data-bind="submit: startSearch">
     <input type="text" class="input-medium search-query" data-bind="value: searchTerm, valueUpdate: 'afterkeydown'" placeholder="The person's first or last name..." />
@@ -12,13 +12,16 @@
 </form>
 
 <div class="row" style="display: none" data-bind="visible: hasSearched()">
-    <div class="span6">
+    <div class="span12">
         <h3>Fellowship One</h3>
         <div class="progress progress-striped active" data-bind="visible: isSearchInProgress() == true">
             <div class="bar" style="width: 100%;"></div>
         </div>
-        <div class="alert" data-bind="visible: f1People().length == 0 && isF1SearchInProgress() == false">
-            <strong>No results</strong> No results matched <b data-bind="text: searchTerm"></b>
+        <div class="alert alert-error" data-bind="visible: hasF1SearchFailed()">
+            <strong>Error</strong> Something has gone wrong with this search
+        </div>
+        <div class="alert" data-bind="visible: hasNoF1Results()">
+            <strong>No results</strong>No results matched <b data-bind="text: searchTerm"></b>
         </div>
         <table class="table table-striped table-bordered" data-bind="visible: f1People().length > 0">
             <thead>
@@ -26,19 +29,28 @@
                     <th>F1ID</th>
                     <th>First Name</th>
                     <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Mobile Phone</th>
+                    <th>Home Phone</th>
+                    <th>Last Updated At</th>
                 </tr>
             </thead>
             <tbody data-bind="template: { name: 'f1person-template', foreach: f1People }">
             </tbody>
         </table>
     </div>
-    <div class="span6">
+</div>
+<div class="row" style="display: none" data-bind="visible: hasSearched()">
+    <div class="span12">
         <h3>Planning Center Online</h3>
         <div class="progress progress-striped active" data-bind="visible: isPCOSearchInProgress() == true">
             <div class="bar" style="width: 100%;"></div>
         </div>
-        <div class="alert" data-bind="visible: f1People().length == 0 && isSearchInProgress() == false">
-            <strong>No results</strong> No results matched <b data-bind="text: searchTerm"></b>
+        <div class="alert alert-error" data-bind="visible: hasPCOSearchFailed()">
+            <strong>Error</strong> Something has gone wrong with this search
+        </div>
+        <div class="alert" data-bind="visible: hasNoPCOResults()">
+            <strong>No results</strong>No results matched <b data-bind="text: searchTerm"></b>
         </div>
         <table class="table table-striped table-bordered" data-bind="visible: pcoPeople().length > 0">
             <thead>
@@ -46,6 +58,10 @@
                     <th>PCOID</th>
                     <th>First Name</th>
                     <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Mobile Phone</th>
+                    <th>Home Phone</th>
+                    <th>Last Updated At</th>
                 </tr>
             </thead>
             <tbody data-bind="template: { name: 'pcoperson-template', foreach: pcoPeople }">
@@ -59,6 +75,10 @@
         <td data-bind="text: f1id"></td>
         <td data-bind="text: firstName"></td>
         <td data-bind="text: lastName"></td>
+        <td data-bind="text: email"></td>
+        <td data-bind="text: mobilePhone"></td>
+        <td data-bind="text: homePhone"></td>
+        <td><abbr data-bind="text: lastUpdatedAt, attr: { title: lastUpdatedAt }"></abbr></td>
     </tr>
 </script>
 
@@ -67,5 +87,9 @@
         <td data-bind="text: pcoid"></td>
         <td data-bind="text: firstName"></td>
         <td data-bind="text: lastName"></td>
+        <td data-bind="text: email"></td>
+        <td data-bind="text: mobilePhone"></td>
+        <td data-bind="text: homePhone"></td>
+        <td><abbr data-bind="text: lastUpdatedAt, attr: { title: lastUpdatedAt }"></abbr></td>
     </tr>
 </script>
